syntax = "proto3";

// 命 令 号: 258
// 命令名称: update_status_report
// 命令描述: 设备升级状态上报
// 文件名称: s258_update_status_report.proto

// 以下是 Android 生成对应 Java 所需信息
option java_package = "com.ubtedu.deviceconnect.libs.ukit.smart.protobuffer";
option java_outer_classname = "PbUpdateStatusReport";

message UpdateStatusReportRequest {

}

message UpdateStatusReportResponse {
  // ATTR: PUSH
  uint32  dev = 1;
  uint32  id=2;
  uint32  status=3;
}
